data/derived/sp14/progs/unify/prog0220.ml.out
Characters 86-132:
  | h::t -> (mulByDigit i (List.rev (List.map (fun x -> x*10 :: []) t) ) ) @ h*i :: [];;
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
